fix for showcase width

--- a/.build/cases-utla/main.html
+++ b/.build/cases-utla/main.html
@@ -10,15 +10,15 @@
             <div class="gv-headline"><span id="utla-name">Local Authority</span></div>
             <div class="gv-subhead">
                 <div class="info-box">
-                    <p><span class="estimated">--</span></p>
+                    <p><span class="estimated">&nbsp;</span></p>
                     <p>estimated</p>
                 </div>
                 <div class="info-box">
-                    <p><span class="recorded">--</span></p>
+                    <p><span class="recorded">&nbsp;</span></p>
                     <p>recorded</p>
                 </div>
             </div>
-            <svg id="gv-svg-col-chart" viewBox="0,0,300,250" width="300" height="250" style="overflow: visible;"></svg>
+            <svg id="gv-svg-col-chart" viewBox="0,0,275,250" width="275" height="250" style="overflow: visible;"></svg>
 
         </div>
 
@@ -26,75 +26,75 @@
             <div class="gv-headline"><span id="utla-name"></span></div>
             <div class="gv-subhead">
                 <div class="info-box">
-                    <p><span class="estimated">--</span></p>
+                    <p><span class="estimated">&nbsp;</span></p>
                     <p>estimated</p>
                 </div>
                 <div class="info-box">
-                    <p><span class="recorded">--</span></p>
+                    <p><span class="recorded">&nbsp;</span></p>
                     <p>recorded</p>
                 </div>
             </div>
-            <svg id="gv-svg-col-chart" viewBox="0,0,300,250" width="300" height="250" style="overflow: visible;"></svg>
+            <svg id="gv-svg-col-chart" viewBox="0,0,275,250" width="275" height="250" style="overflow: visible;"></svg>
         </div>
 
         <div class="multiple">
             <div class="gv-headline"><span id="utla-name"></span></div>
             <div class="gv-subhead">
                 <div class="info-box">
-                    <p><span class="estimated">--</span></p>
+                    <p><span class="estimated">&nbsp;</span></p>
                     <p>estimated</p>
                 </div>
                 <div class="info-box">
-                    <p><span class="recorded">--</span></p>
+                    <p><span class="recorded">&nbsp;</span></p>
                     <p>recorded</p>
                 </div>
             </div>
-            <svg id="gv-svg-col-chart" viewBox="0,0,300,250" width="300" height="250" style="overflow: visible;"></svg>
+            <svg id="gv-svg-col-chart" viewBox="0,0,275,250" width="275" height="250" style="overflow: visible;"></svg>
         </div>
 
         <div class="multiple">
             <div class="gv-headline"><span id="utla-name"></span></div>
             <div class="gv-subhead">
                 <div class="info-box">
-                    <p><span class="estimated">--</span></p>
+                    <p><span class="estimated">&nbsp;</span></p>
                     <p>estimated</p>
                 </div>
                 <div class="info-box">
-                    <p><span class="recorded">--</span></p>
+                    <p><span class="recorded">&nbsp;</span></p>
                     <p>recorded</p>
                 </div>
             </div>
-            <svg id="gv-svg-col-chart" viewBox=viewBox="0,0,300,250" width="300" height="250" style="overflow: visible;"></svg>
+            <svg id="gv-svg-col-chart" viewBox="0,0,275,250" width="275" height="250" style="overflow: visible;"></svg>
         </div>
 
         <div class="multiple">
             <div class="gv-headline"><span id="utla-name"></span></div>
             <div class="gv-subhead">
                 <div class="info-box">
-                    <p><span class="estimated">--</span></p>
+                    <p><span class="estimated">&nbsp;</span></p>
                     <p>estimated</p>
                 </div>
                 <div class="info-box">
-                    <p><span class="recorded">--</span></p>
+                    <p><span class="recorded">&nbsp;</span></p>
                     <p>recorded</p>
                 </div>
             </div>
-            <svg id="gv-svg-col-chart" viewBox="0,0,300,250" width="300" height="250" style="overflow: visible;"></svg>
+            <svg id="gv-svg-col-chart" viewBox="0,0,275,250" width="275" height="250" style="overflow: visible;"></svg>
         </div>
 
         <div class="multiple">
             <div class="gv-headline"><span id="utla-name"></span></div>
             <div class="gv-subhead">
                 <div class="info-box">
-                    <p><span class="estimated">--</span></p>
+                    <p><span class="estimated">&nbsp;</span></p>
                     <p>estimated</p>
                 </div>
                 <div class="info-box">
-                    <p><span class="recorded">--</span></p>
+                    <p><span class="recorded">&nbsp;</span></p>
                     <p>recorded</p>
                 </div>
             </div>
-            <svg id="gv-svg-col-chart" viewBox="0,0,300,250" width="300" height="250" style="overflow: visible;"></svg>
+            <svg id="gv-svg-col-chart" viewBox="0,0,275,250" width="275" height="250" style="overflow: visible;"></svg>
         </div>
     </div>
     <div class="source">
