--- a/.build/cases-eng/main.html
+++ b/.build/cases-eng/main.html
@@ -1,5 +1,5 @@
 <div class="interactive-wrapper eng-graph">
-    <div class="gv-headline">Infections in England could be 10 times higher than official recorded numbers</div>
+    <div class="gv-headline">Infections in England could be six times higher than official numbers</div>
     <div class="gv-subhead-top">
         Official, recorded cases compared to estimated total cases in England
     </div>
@@ -17,6 +17,6 @@
     <div class="source">
         % of the population of England who have been infected by coronavirus over the course of the pandemic. 
         Data: Estimated cases from Edge Health. Recorded cases from data.gov.uk. 
-        Correct as of <span id="gv-col-timestamp"> 22 Nov 2020</span>
+        Data up to <span id="gv-col-timestamp"> 9 Nov 2020</span>
     </div>
 </div>
