--- a/.build/cases-utla/main.html
+++ b/.build/cases-utla/main.html
@@ -1,6 +1,6 @@
 <div class="interactive-wrapper">
 
-    <div class="gv-headline">New figures reveal London and north-west as England's worst-hit areas</div>
+    <div class="gv-headline">One in three may have had coronavirus in England's worst-hit areas</div>
     <div class="gv-subhead-top">
         Official, recorded cases compared to estimated total cases by local authority.
     </div>
@@ -100,7 +100,7 @@
     <div class="source">
         % of the population who have been infected by coronavirus over the course of the pandemic. 
         Data: Estimated cases from Edge Health. Recorded cases from data.gov.uk. 
-        Correct as of <span id="gv-col-timestamp"> 22 Nov 2020</span>
+        Data up to <span id="gv-col-timestamp"> 9 Nov 2020</span>
     </div>
 
 </div>
