correct app version of eng graph

--- a/.build/cases-eng/main.html
+++ b/.build/cases-eng/main.html
@@ -1,7 +1,7 @@
 <div class="interactive-wrapper eng-graph">
     <div class="gv-headline">Infections in England could be six times higher than official numbers</div>
     <div class="gv-subhead-top">
-        Official, recorded cases compared to estimated total cases in England
+        Official, recorded cases compared to estimated cases in England
     </div>
     <div class="gv-subhead">
         <div class="info-box">
@@ -15,8 +15,7 @@
     </div>
     <svg id="gv-svg-col-chart" viewBox="0,0,600,400" style="overflow: visible;"></svg>
     <div class="source">
-        % of the population of England who have been infected by coronavirus over the course of the pandemic. 
+        % of the population of England who have been infected by coronavirus over the course of the pandemic, up to 9 Nov 2020. 
         Data: Estimated cases from Edge Health. Recorded cases from data.gov.uk. 
-        Data up to <span id="gv-col-timestamp"> 9 Nov 2020</span>
     </div>
 </div>
