--- a/.build/cases-utla/main.html
+++ b/.build/cases-utla/main.html
@@ -2,7 +2,7 @@
 
     <div class="gv-headline">One in three may have had coronavirus in England's worst-hit areas</div>
     <div class="gv-subhead-top">
-        Official, recorded cases compared to estimated total cases by local authority.
+        Official, recorded cases compared to estimated cases by local authority.
     </div>
 
     <div class="multiple-container">
@@ -98,9 +98,8 @@
         </div>
     </div>
     <div class="source">
-        % of the population who have been infected by coronavirus over the course of the pandemic. 
-        Data: Estimated cases from Edge Health. Recorded cases from data.gov.uk. 
-        Data up to <span id="gv-col-timestamp"> 9 Nov 2020</span>
+        % of the population who have been infected by coronavirus over the course of the pandemic, up to 9 Nov 2020.
+        Data: Estimated cases from Edge Health. Recorded cases from data.gov.uk.
     </div>
 
 </div>
