--- a/.build/cases-eng/main.html
+++ b/.build/cases-eng/main.html
@@ -15,7 +15,7 @@
     </div>
     <svg id="gv-svg-col-chart" viewBox="0,0,600,400" style="overflow: visible;"></svg>
     <div class="source">
-        % of the population of England who have been infected by coronavirus over the course of the pandemic, up to 9 Nov 2020. 
-        Data: Estimated cases from Edge Health. Recorded cases from data.gov.uk. 
+        % of the population of England infected by coronavirus over the course of the pandemic, up to 9 Nov 2020. 
+        Data: Estimated cases - Edge Health. Recorded cases - data.gov.uk. 
     </div>
 </div>
