--- a/.build/cases-utla/main.html
+++ b/.build/cases-utla/main.html
@@ -98,8 +98,8 @@
         </div>
     </div>
     <div class="source">
-        % of the population who have been infected by coronavirus over the course of the pandemic, up to 9 Nov 2020.
-        Data: Estimated cases from Edge Health. Recorded cases from data.gov.uk.
+        % of the population infected by coronavirus over the course of the pandemic, up to 9 Nov 2020.
+        Data: Estimated cases - Edge Health. Recorded cases - data.gov.uk.
     </div>
 
 </div>
