--- a/.build/cases-utla/main.html
+++ b/.build/cases-utla/main.html
@@ -18,7 +18,7 @@
                     <p>recorded</p>
                 </div>
             </div>
-            <svg id="gv-svg-col-chart" viewBox="0,0,275,250" width="275" height="250" style="overflow: visible;"></svg>
+            <svg class="gv-svg-col-chart-est" viewBox="0,0,275,250" width="275" height="250" style="overflow: visible;"></svg>
 
         </div>
 
@@ -34,7 +34,7 @@
                     <p>recorded</p>
                 </div>
             </div>
-            <svg id="gv-svg-col-chart" viewBox="0,0,275,250" width="275" height="250" style="overflow: visible;"></svg>
+            <svg class="gv-svg-col-chart-est" viewBox="0,0,275,250" width="275" height="250" style="overflow: visible;"></svg>
         </div>
 
         <div class="multiple">
@@ -49,7 +49,7 @@
                     <p>recorded</p>
                 </div>
             </div>
-            <svg id="gv-svg-col-chart" viewBox="0,0,275,250" width="275" height="250" style="overflow: visible;"></svg>
+            <svg class="gv-svg-col-chart-est" viewBox="0,0,275,250" width="275" height="250" style="overflow: visible;"></svg>
         </div>
 
         <div class="multiple">
@@ -64,7 +64,7 @@
                     <p>recorded</p>
                 </div>
             </div>
-            <svg id="gv-svg-col-chart" viewBox="0,0,275,250" width="275" height="250" style="overflow: visible;"></svg>
+            <svg class="gv-svg-col-chart-est" viewBox="0,0,275,250" width="275" height="250" style="overflow: visible;"></svg>
         </div>
 
         <div class="multiple">
@@ -79,7 +79,7 @@
                     <p>recorded</p>
                 </div>
             </div>
-            <svg id="gv-svg-col-chart" viewBox="0,0,275,250" width="275" height="250" style="overflow: visible;"></svg>
+            <svg class="gv-svg-col-chart-est" viewBox="0,0,275,250" width="275" height="250" style="overflow: visible;"></svg>
         </div>
 
         <div class="multiple">
@@ -94,12 +94,12 @@
                     <p>recorded</p>
                 </div>
             </div>
-            <svg id="gv-svg-col-chart" viewBox="0,0,275,250" width="275" height="250" style="overflow: visible;"></svg>
+            <svg class="gv-svg-col-chart-est" viewBox="0,0,275,250" width="275" height="250" style="overflow: visible;"></svg>
         </div>
     </div>
     <div class="source">
-        % of the population infected by coronavirus over the course of the pandemic, up to 9 Nov 2020.
-        Data: Estimated cases - Edge Health. Recorded cases - data.gov.uk.
+        % population infected by coronavirus over the course of the pandemic, up to 9 Nov 2020.
+        Data: Estimated cases, Edge Health. Recorded cases, data.gov.uk.
     </div>
 
 </div>
